--- a/src/components/Meals/AddMeals.css
+++ b/src/components/Meals/AddMeals.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
 }
 .meals-quantity{
-    margin-right: 50%;
+    width: 30px;
 }
 .amount{
     margin-right: 10px;
